--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
   },
   "name": "backend",
@@ -22,7 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "startmon": "nodemon server.js",
-    "fullinstall": "npm install; cd functions; npm install; cd .."
+    "fullinstall": "npm install && cd functions && npm install && cd .."
   },
   "keywords": [],
   "author": "",
