--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "sass": "^1.93.2",
