--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "docx": "^9.5.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "multer": "^2.0.2",
     "react": "^19.2.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-input-mask": "^2.0.4",
+    "react-imask": "^7.6.1",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "sass": "^1.93.2",
