--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "docx": "^9.5.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-datepicker": "^8.8.0",
